[project]
name = "fingers-lightning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
]
